[package]
name = "coding-battle-sim"
version = "0.1.0"
edition = "2024"

[workspace]
resolver = "2"
members = ["macros"]

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
codegen-units = 1
lto = "thin"

[dependencies]
# Bevy Dependencies (dependant on the version of Bevy)
bevy = { version = "0.16", features = [
    "dynamic_linking", # dynamic linking is not recommended for release builds
    "bevy_dev_tools",
    "file_watcher",
    "serialize",
] }
bevy-inspector-egui = "0.31.0"

# Other Dependencies
serde = "1"
thiserror = "2.0.12"
ron = "0.10.1"
